mdapiunpkg/objects/Power__c.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affected_Stat__c</fullName>
        <label>Affected Stat</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_Value__c</fullName>
        <label>Affected Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <inlineHelpText>Details such as: range, damage, damage type, area of effect, etc.</inlineHelpText>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recharge__c</fullName>
        <inlineHelpText>When does the power recharge, if that is a mechanic in your system.</inlineHelpText>
        <label>Recharge</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ruleset__c</fullName>
        <label>Ruleset</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ruleset</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abjuration</fullName>
                </value>
                <value>
                    <fullName>Evocation</fullName>
                </value>
                <value>
                    <fullName>Divination</fullName>
                </value>
                <value>
                    <fullName>Conjuration</fullName>
                </value>
                <value>
                    <fullName>Heal</fullName>
                </value>
                <value>
                    <fullName>Buff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Melee</fullName>
                </value>
                <value>
                    <fullName>Ranged</fullName>
                </value>
                <value>
                    <fullName>Arcane</fullName>
                </value>
                <value>
                    <fullName>Divine</fullName>
                </value>
                <value>
                    <fullName>Trap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Power</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Power Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Powers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>